chore: apply previous codes (#253)
Co-authored-by: dongyub.park <dongyub.park@42dot.ai>