@@ -1,131 +1,191 @@
 package kitchenpos;
 
-import kitchenpos.eatinorders.domain.Order;
-import kitchenpos.eatinorders.domain.OrderLineItem;
-import kitchenpos.eatinorders.domain.OrderStatus;
-import kitchenpos.eatinorders.domain.OrderTable;
-import kitchenpos.eatinorders.domain.OrderType;
-import kitchenpos.menus.domain.Menu;
-import kitchenpos.menus.domain.MenuGroup;
-import kitchenpos.menus.domain.MenuProduct;
-import kitchenpos.products.domain.Product;
-
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
 
+import kitchenpos.common.domain.PurgomalumClient;
+import kitchenpos.common.infra.FakePurgomalumClient;
+import kitchenpos.menu.domain.Menu;
+import kitchenpos.menu.domain.MenuGroup;
+import kitchenpos.menu.domain.MenuProduct;
+import kitchenpos.order.application.dto.OrderCreationRequest;
+import kitchenpos.order.application.dto.OrderLineItemCreationRequest;
+import kitchenpos.order.domain.DeliveryOrder;
+import kitchenpos.order.domain.EatInOrder;
+import kitchenpos.order.domain.OrderLineItems;
+import kitchenpos.order.domain.OrderStatus;
+import kitchenpos.order.domain.OrderTable;
+import kitchenpos.order.domain.OrderType;
+import kitchenpos.order.domain.TakeoutOrder;
+import kitchenpos.product.domain.Product;
 public class Fixtures {
-    public static final UUID INVALID_ID = new UUID(0L, 0L);
 
-    public static Menu menu() {
-        return menu(19_000L, true, menuProduct());
-    }
+	public static final PurgomalumClient purgomalumClient = new FakePurgomalumClient();
 
-    public static Menu menu(final long price, final MenuProduct... menuProducts) {
-        return menu(price, false, menuProducts);
-    }
+	public static final UUID INVALID_ID = new UUID(0L, 0L);
 
-    public static Menu menu(final long price, final boolean displayed, final MenuProduct... menuProducts) {
-        final Menu menu = new Menu();
-        menu.setId(UUID.randomUUID());
-        menu.setName("후라이드+후라이드");
-        menu.setPrice(BigDecimal.valueOf(price));
-        menu.setMenuGroup(menuGroup());
-        menu.setDisplayed(displayed);
-        menu.setMenuProducts(Arrays.asList(menuProducts));
-        return menu;
-    }
+	public static Menu menu() {
+		return menu(UUID.randomUUID(), 19_000L, true, menuProduct());
+	}
 
-    public static MenuGroup menuGroup() {
-        return menuGroup("두마리메뉴");
-    }
+	public static Menu menu(UUID id) {
+		return menu(id, 19_000L, true, menuProduct());
+	}
 
-    public static MenuGroup menuGroup(final String name) {
-        final MenuGroup menuGroup = new MenuGroup();
-        menuGroup.setId(UUID.randomUUID());
-        menuGroup.setName(name);
-        return menuGroup;
-    }
+	public static Menu menu(final long price, final MenuProduct... menuProducts) {
+		return menu(UUID.randomUUID(), price, true, menuProducts);
+	}
 
-    public static MenuProduct menuProduct() {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setSeq(new Random().nextLong());
-        menuProduct.setProduct(product());
-        menuProduct.setQuantity(2L);
-        return menuProduct;
-    }
+	public static Menu menu(final long price, final boolean displayed, final MenuProduct... menuProducts) {
+		return menu(UUID.randomUUID(), price, displayed, menuProducts);
+	}
 
-    public static MenuProduct menuProduct(final Product product, final long quantity) {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setSeq(new Random().nextLong());
-        menuProduct.setProduct(product);
-        menuProduct.setQuantity(quantity);
-        return menuProduct;
-    }
+	public static Menu menu(final UUID id, final long price, final MenuProduct... menuProducts) {
+		return menu(id, price, true, menuProducts);
+	}
 
-    public static Order order(final OrderStatus status, final String deliveryAddress) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.DELIVERY);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        order.setDeliveryAddress(deliveryAddress);
-        return order;
-    }
+	public static Menu menu(final UUID id, final long price, final boolean displayed, final MenuProduct... menuProducts) {
+		return new Menu(
+			id,
+			"후라이드+후라이드",
+			BigDecimal.valueOf(price),
+			menuGroup(),
+			List.of(menuProducts),
+			displayed,
+			purgomalumClient
+		);
+	}
 
-    public static Order order(final OrderStatus status) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.TAKEOUT);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        return order;
-    }
+	public static MenuGroup menuGroup() {
+		return menuGroup("두마리메뉴");
+	}
 
-    public static Order order(final OrderStatus status, final OrderTable orderTable) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.EAT_IN);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        order.setOrderTable(orderTable);
-        return order;
-    }
+	public static MenuGroup menuGroup(final String name) {
+		return new MenuGroup(UUID.randomUUID(), name);
+	}
 
-    public static OrderLineItem orderLineItem() {
-        final OrderLineItem orderLineItem = new OrderLineItem();
-        orderLineItem.setSeq(new Random().nextLong());
-        orderLineItem.setMenu(menu());
-        return orderLineItem;
-    }
+	public static MenuProduct menuProduct() {
+		return new MenuProduct(new Random().nextLong(), product(), 2L);
+	}
 
-    public static OrderTable orderTable() {
-        return orderTable(false, 0);
-    }
+	public static MenuProduct menuProduct(final Product product, final long quantity) {
+		return new MenuProduct(new Random().nextLong(), product, quantity);
+	}
 
-    public static OrderTable orderTable(final boolean occupied, final int numberOfGuests) {
-        final OrderTable orderTable = new OrderTable();
-        orderTable.setId(UUID.randomUUID());
-        orderTable.setName("1번");
-        orderTable.setNumberOfGuests(numberOfGuests);
-        orderTable.setOccupied(occupied);
-        return orderTable;
-    }
+	public static OrderCreationRequest orderCreationRequest(OrderType type, UUID menuId) {
+		List<OrderLineItemCreationRequest> orderLineItemRequests = List.of(
+			createOrderLineItemRequest(type, menuId, 19_000L, 3L));
 
-    public static Product product() {
-        return product("후라이드", 16_000L);
-    }
+		if (type == OrderType.TAKEOUT) {
+			return new OrderCreationRequest(
+				OrderType.TAKEOUT,
+				orderLineItemRequests,
+				null,
+				null
+			);
+		}
 
-    public static Product product(final String name, final long price) {
-        final Product product = new Product();
-        product.setId(UUID.randomUUID());
-        product.setName(name);
-        product.setPrice(BigDecimal.valueOf(price));
-        return product;
-    }
+		if (type == OrderType.DELIVERY) {
+			return new OrderCreationRequest(
+				OrderType.DELIVERY,
+				orderLineItemRequests,
+				"서울시 송파구 위례성대로 2",
+				null
+			);
+		}
+
+		if (type == OrderType.EAT_IN) {
+			return new OrderCreationRequest(
+				OrderType.EAT_IN,
+				orderLineItemRequests,
+				"서울시 송파구 위례성대로 2",
+				orderTable(4, true).getId()
+			);
+		}
+
+		return new OrderCreationRequest(
+			null,
+			orderLineItemRequests,
+			null,
+			null
+		);
+	}
+
+	public static OrderLineItemCreationRequest createOrderLineItemRequest(final OrderType orderType, final UUID menuId, final long price, final long quantity) {
+		return new OrderLineItemCreationRequest(
+			orderType,
+			menuId,
+			BigDecimal.valueOf(price),
+			quantity
+		);
+	}
+
+	public static DeliveryOrder deliveryOrder(final OrderStatus status, final String deliveryAddress) {
+		OrderLineItemCreationRequest request = orderLineItemCreationRequest(OrderType.DELIVERY);
+		Menu menu = menu(request.menuId());
+
+		return new DeliveryOrder(
+			status,
+			LocalDateTime.of(2020, 1, 1, 12, 0),
+			OrderLineItems.fromRequests(List.of(request), Map.of(request.menuId(), menu)),
+			deliveryAddress
+		);
+	}
+
+	public static EatInOrder eatInOrder(final OrderStatus status, final OrderTable orderTable) {
+		OrderLineItemCreationRequest request = orderLineItemCreationRequest(OrderType.EAT_IN);
+		Menu menu = menu(request.menuId());
+
+		return new EatInOrder(
+			status,
+			LocalDateTime.of(2020, 1, 1, 12, 0),
+			OrderLineItems.fromRequests(List.of(request), Map.of(request.menuId(), menu)),
+			orderTable
+		);
+	}
+
+	public static TakeoutOrder takeoutOrder(final OrderStatus status) {
+		OrderLineItemCreationRequest request = orderLineItemCreationRequest(OrderType.TAKEOUT);
+		Menu menu = menu(request.menuId());
+		return new TakeoutOrder(
+			status,
+			LocalDateTime.of(2020, 1, 1, 12, 0),
+			OrderLineItems.fromRequests(List.of(request), Map.of(request.menuId(), menu))
+		);
+	}
+
+	public static OrderLineItemCreationRequest orderLineItemCreationRequest(OrderType orderType) {
+		return new OrderLineItemCreationRequest(
+			orderType,
+			menu().getId(),
+			BigDecimal.valueOf(19_000L),
+			1
+		);
+	}
+
+	public static OrderTable orderTable() {
+		return orderTable(0, false);
+	}
+
+	public static OrderTable orderTable(final int numberOfGuests, final boolean occupied) {
+		return new OrderTable(
+			UUID.randomUUID(),
+			"1번",
+			numberOfGuests,
+			occupied
+		);
+	}
+
+	public static Product product() {
+		return product("후라이드", 16_000L);
+	}
+
+	public static Product product(final String name, final long price) {
+		return new Product(name, BigDecimal.valueOf(price), purgomalumClient);
+	}
 }
+
